New release, updated README