@@ -1,5 +1,8 @@
 # burp-rest-api
 
+> ⚠️ **WARNING: This project is no longer actively maintained.**  
+> While the repository will remain available for reference, no further updates, bug fixes, or support will be provided.  
+
 ## Overview
 
 A REST/JSON API to the [Burp Suite](https://portswigger.net/burp) security tool.
@@ -8,7 +11,7 @@ Since the first commit back in 2016, **burp-rest-api** has been the default tool
 
 ## Getting Started
 
-1) Download the latest *burp-rest-api* JAR (e.g. `burp-rest-api-2.3.0.jar`) and the launcher `burp-rest-api.{sh,bat}` script from the [release page](https://github.com/vmware/burp-rest-api/releases)
+1) Download the latest *burp-rest-api* JAR (e.g. `burp-rest-api-2.3.2.jar`) and the launcher `burp-rest-api.{sh,bat}` script from the [release page](https://github.com/vmware/burp-rest-api/releases)
 2) Place them within a directory having the **original** Burp Suite Professional JAR (e.g. *burpsuite_pro_v2025.6.3.jar*). Please note that the actual JAR filename doesn't matter since the launcher will include all JARs in the classpath 
 
 **Important!!!** This is supposed to be the JAR downloaded from https://portswigger.net/burp/releases. You should NOT use the `burpsuite_pro.jar` from a local Burp Suite installation
@@ -35,7 +38,7 @@ To __run Burp in UI mode__ from the command line, use one of the following comma
 On Java <= 1.8, it is also possible to execute burp-rest-api in the following way:
 
 ```
-    java -jar burp-rest-api-2.2.0.jar --headless.mode=false --burp.jar=./lib/burpsuite_pro.jar
+    java -jar burp-rest-api-2.3.2.jar --headless.mode=false --burp.jar=./lib/burpsuite_pro.jar
 ```
 
 To __modify the server port__ on which the API is accessible, use one of the following commands:
@@ -145,11 +148,7 @@ The following section contains useful information to get started with the develo
 ```
     # build the jar
     ./gradlew clean build
-    # and run it (Java <= 1.8 only!)
-    java -jar build/libs/burp-rest-api-2.2.0.jar --burp.jar=./lib/burpsuite_pro.jar
 ```
-
-The version number of the JAR should match the version number from `build.gradle` while generating the JAR.
 
 If you want to run the extension on recent (JRE > 9) versions of the JVM, use the `burp-rest-api.{sh,bat}` launcher script after copying *burpsuite_pro.jar* and the *burp-rest-api.jar* in the same directory of the script.
 
@@ -158,6 +157,12 @@ If you want to run the extension on recent (JRE > 9) versions of the JVM, use th
 ./burp-rest-api.sh
 # On Windows
 ./burp-rest-api.bat
+```
+
+To run it without using the provided scripts, please make sure to include the following Java arguments
+
+```
+--add-opens=java.desktop/javax.swing=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED
 ```
 
 ## License
